fixed spacings

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ h1 {
 
 h2 {
   font-size: 25px;
+  line-height: 32px;
 }
 
 h3 {
@@ -48,7 +49,7 @@ h3 {
 
 h4 {
   font-size: 15px;
-  letter-spacing: 0.18px;
+  letter-spacing: 0.34px;
   line-height: 23px;
   color: var(--darkgray);
 }
@@ -189,6 +190,15 @@ h6 {
 .button2 {
   color: var(--darkgray);
   background-color: transparent;
+}
+
+.button3 {
+  color: var(--accent3);
+  background-color: transparent;
+}
+
+.resources-link {
+  letter-spacing: 0px;
 }
 
 /* Layout */
@@ -399,6 +409,10 @@ h6 {
   margin-top: 80px;
 }
 
+.margin-top-90 {
+  margin-top: 90px;
+}
+
 .margin-top-100 {
   margin-top: 100px;
 }
@@ -586,10 +600,6 @@ h6 {
   text-align: center;
 }
 
-.text-justify {
-  text-align: justify;
-}
-
 .nowrap {
   white-space: nowrap;
 }
@@ -626,6 +636,19 @@ h6 {
 
 .expanded-buttons {
   display: block;
+}
+
+.section-header {
+  margin-top: 80px;
+  margin-bottom: 100px;
+}
+
+.item-margin-top {
+  margin-top: 110px;
+}
+
+.description-margin-top {
+  margin-top: 20px;
 }
 
 @media(min-width: 840px) {
